# Qml-Cpp-Framework

./: .gitignore  CMakeLists.txt  qml.qrc
src/: DeviceControllor.cpp  main.cpp
src/include/: DeviceControllor.h
ui/: main.qml
ui/components/: CardPanel.qml  CyberButton.qml  DataBox.qml  HeaderBar.qml  MenuBar.qml  RoiHandle.qml  StatusBar.qml  TitleBar.qml
ui/views/: DeviceStatusView.qml  MyPanel.qml  OtherSettingsView.qml  StateTest.qml  SystemLogView.qml  SystemStatusView.qml  UserManageView.qml  VisionMonitorView.qml  VisionMonitorViewPlus.qml  VisionMonitorViewPro.qml
